--- a/Api/.htaccess
+++ b/Api/.htaccess
@@ -3,4 +3,4 @@ RewriteEngine On
 Header always set X-username expr=%{REMOTE_USER}
 RewriteRule "^\/*$" "-" [R=204]
 
-Action Allocate ./AllocFile.py
+Action cgi-script ./AllocFile.py
