added indexing to saves

--- a/site.conf
+++ b/site.conf
@@ -33,9 +33,14 @@ location /Alloc {
 }
 
 location /Saves {
+    autoindex on;
     dav_methods PUT;
 
+    set $c_flag "$request_method";
     if (!-f $request_filename) {
+        set $c_flag "${c_flag}+";
+    }
+    if ($c_flag = "PUT+") {
         return 409;
     }
 }
