base name is now sanitized

--- a/site.conf
+++ b/site.conf
@@ -8,9 +8,12 @@ location /Alloc {
 
     content_by_lua_block {
         local args, err = ngx.req.get_uri_args()
-        if not args["base"] then ngx.exit(400) end
+        base = args["base"]
+        if not base then ngx.exit(400) end
 
-        full_prefix = ngx.var.document_root .. "/Saves/" .. args["base"] .. os.date("_%d-%m-%y_%H-%M_")
+        if not string.match(base, "^[A-Za-z0-9_-]+$") then ngx.exit(422) end
+
+        full_prefix = ngx.var.document_root .. "/Saves/" .. base .. os.date("_%d-%m-%y_%H-%M_")
 
         suffix = 0
         while true do
